2005-04-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: More fixes to the system tray icon stuff. Tested on
	linux and windows now.

2005-04-25  Reinhard Max  <max@suse.de>

	* tkchat.tcl: Fixed the latest additions to not break execution on
	non-Windows platforms.

2005-04-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Applied patch #1187190 by Daniel South which fixes
	updating the system tray icon when the application regains focus
	on windows.
	* tkchat.tcl: Applied patch #1187273 by Daniel South to fix
	restoring a hidden app window to the pre-hidden state.

2005-04-23  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl (tkjabber::cleanup): Modified the cleanup to check
	for the existence of the muc variable. Sometimes it has already
	been cleaned up.

2004-04-13  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: removed askleo and babelfish bindings from private chat
	windows. The private chat window now uses nick colors too (doesn't
	update them properly, though). Added 'help' item to the help menu.
	Added visibility option for away/online/dnd 'availability' messages.
	Added user idle detection in win2k+ to do auto-away/xa, configurable in
	the preferences menu (disabled by default). This requires an additional
	(optional) extension (idle) to be available.

2005-04-12  Reinhard Max  <max@suse.de>

	* tkchat.tcl: Removed explicit placement from geometry
	settings. It's the windowmanager's job to place new windows.

2004-04-11  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: one to one chat added; /msg now emits '-type normal';
        /chat <nick> msg will open a chat window, as will double clicking on
        the nick in the online users list; user info is now a right click
        action.
        * tkchat.tcl: fix new message notify for private chats; fix /me in
        private chats.

2005-04-04  Pat Thoyts  <patthoyts@users.sourceforge.net>
